--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <![endif]-->  
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Привет!</h1>
 
     <!-- на jQuery (необходим для Bootstrap - х JavaScript плагины) -->  
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
